[package]
name = "crfg-demo"
version = "0.1.0"
authors = ["dingyouzhen <moses_paul@163.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7"
parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
primitive-types = { version = "0.4.0", features = ["codec"] }
blake2-rfc = { version = "0.2.18"}
twox-hash = { version = "1.2.0" }
byteorder = { version = "1.3.1", default-features = false }
hex = "0.3"
