[package]
name = "crfg-demo"
version = "0.1.0"
authors = ["dingyouzhen <moses_paul@163.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7"
parity-codec = { version = "4.1.1" }
primitive-types = { version = "0.4.0"}
ed25519-dalek = { version = "1.0.0-pre.1"}

blake2-rfc = { version = "0.2.18"}
twox-hash = { version = "1.2.0" }
byteorder = { version = "1.3.1", default-features = false }
hex = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"