[package]
name = "crfg-demo"
version = "0.1.0"
authors = ["dingyouzhen <moses_paul@163.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7"
parity-codec = "4.1.1"
primitive-types = "0.4.0"
ed25519-dalek = "1.0.0-pre.1"
rand = "0.6"

blake2-rfc = "0.2.18"
twox-hash = "1.2.0"
byteorder = "1.3.1"
hex = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
